syntax = "proto3";

package com.ticket_app.v1;

import "google/protobuf/empty.proto";

enum SeatStatus {
    AVAILABLE = 0;
    BOOKED = 1;
    SOLD = 2;
}

message Seat {
    string id = 1;
    int32 number = 2;
    SeatStatus status = 3;
    string event_id = 6;
}

message SeatRequest {
    string id = 1;
}

message SeatResponse {
    string id = 1;
    int32 number = 2;
    SeatStatus status = 3;
    string event_id = 4;
}

message CreateSeatRequest {
    int32 number = 1;
    string event_id = 3;
}

message UpdateSeatRequest {
    string id = 1;
    int32 number = 2;
    SeatStatus status = 3;
    string event_id = 4;
}

message DeleteSeatRequest {
    string id = 1;
}

service Seats {
    rpc GetSeat(SeatRequest) returns (SeatResponse);
    rpc GetSeats(google.protobuf.Empty) returns (stream SeatResponse);
    rpc CreateSeat(CreateSeatRequest) returns (SeatResponse);
    rpc UpdateSeat(UpdateSeatRequest) returns (SeatResponse);
    rpc DeleteSeat(DeleteSeatRequest) returns (SeatResponse);
}